webinter/compiler.c
/* A recursive-descent parser generated by peg 0.1.18 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 22
#line 1 "./compiler.leg"

;
#define YYPARSE shica_compiler_parse
#define YYSTYPE int

YYSTYPE result;
int shica_compiler_parse(void);
#include <stdlib.h>
#include <stdio.h>
#include <string.h>
#include <ctype.h>

/*
FOR storing the web text
This is a global variable that will hold the web text.

*/
char *WEBTEXT 	   = 0;
int   WEBTEXT_SIZE = 0;
int   WEBTEXT_POS  = 0;

int store(const char* msg) {
	// if(WEBTEXT){
	// 	printf("Freeing previous WEBTEXT\n");
	// 	free(WEBTEXT); // Free previous content if any
	// }
	WEBTEXT_SIZE = strlen(msg);
	if (WEBTEXT_SIZE == 0) {
		printf("WEBTEXT_SIZE is 0, returning\n");
		return 0;
	}
    WEBTEXT = strdup(msg);
	WEBTEXT_POS = 0; 
	printf("end of store function\n");
	return 1;
}

int getchar_from_text() {
    if (!WEBTEXT || WEBTEXT[WEBTEXT_POS] == '\0') {
        return -1; // EOF の代わり
    }
    return WEBTEXT[WEBTEXT_POS++];
}

int get_result(void){
	printf("compile is %s\n",shica_compiler_parse()? "failed" : "succeeded");
	printf("get_result called, = %d\n",result);
	return result;
}

// This function is used to read characters from the web text.
#define getchar getchar_from_text

/*
FOR COMPILE WEBTEXT
*/

int *variables = 0;

struct Symbol {
    char *name;
    int   index;  // 0... generated for each new symbol name
};

typedef struct Symbol Symbol;

int nextIndex = 0;

Symbol **symbols = 0;
int     nsymbols = 0;

Symbol *newSymbol(char *name)
{
    Symbol *sym = calloc(1, sizeof(*sym));
    sym->name  = strdup(name);
    sym->index = nextIndex++;
    return sym;
}

Symbol *intern(char *name)
{
    // linear search for existing symbol
    for (int i = 0;  i < nsymbols;  ++i)
	if (!strcmp(symbols[i]->name, name))
	    return symbols[i];
    symbols   = realloc(symbols,   sizeof(*symbols)   * (nsymbols + 1));
    variables = realloc(variables, sizeof(*variables) * (nsymbols + 1));
    return symbols[nsymbols++] = newSymbol(name);
}




#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_blank(yycontext *yy); /* 22 */
YY_RULE(int) yy_alnum(yycontext *yy); /* 21 */
YY_RULE(int) yy_alpha(yycontext *yy); /* 20 */
YY_RULE(int) yy_integer(yycontext *yy); /* 19 */
YY_RULE(int) yy_RPAR(yycontext *yy); /* 18 */
YY_RULE(int) yy_LPAR(yycontext *yy); /* 17 */
YY_RULE(int) yy_value(yycontext *yy); /* 16 */
YY_RULE(int) yy_PLING(yycontext *yy); /* 15 */
YY_RULE(int) yy_PCENT(yycontext *yy); /* 14 */
YY_RULE(int) yy_SLASH(yycontext *yy); /* 13 */
YY_RULE(int) yy_STAR(yycontext *yy); /* 12 */
YY_RULE(int) yy_unary(yycontext *yy); /* 11 */
YY_RULE(int) yy_MINUS(yycontext *yy); /* 10 */
YY_RULE(int) yy_PLUS(yycontext *yy); /* 9 */
YY_RULE(int) yy_mul(yycontext *yy); /* 8 */
YY_RULE(int) yy_add(yycontext *yy); /* 7 */
YY_RULE(int) yy_EQUAL(yycontext *yy); /* 6 */
YY_RULE(int) yy_id(yycontext *yy); /* 5 */
YY_RULE(int) yy_assign(yycontext *yy); /* 4 */
YY_RULE(int) yy_expr(yycontext *yy); /* 3 */
YY_RULE(int) yy__(yycontext *yy); /* 2 */
YY_RULE(int) yy_start(yycontext *yy); /* 1 */

YY_ACTION(void) yy_1_id(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_id\n"));
  {
#line 121
   __ = intern(yytext)->index ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_integer(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_integer\n"));
  {
#line 119
   __ = atoi(yytext) ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_value(yycontext *yy, char *yytext, int yyleng)
{
#define i yy->__val[-1]
#define lhs yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_value\n"));
  {
#line 117
   __ = variables[i] ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef i
#undef lhs
}
YY_ACTION(void) yy_1_value(yycontext *yy, char *yytext, int yyleng)
{
#define i yy->__val[-1]
#define lhs yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_value\n"));
  {
#line 115
   __ =  lhs ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef i
#undef lhs
}
YY_ACTION(void) yy_2_unary(yycontext *yy, char *yytext, int yyleng)
{
#define lhs yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_unary\n"));
  {
#line 112
   __ = !lhs ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef lhs
}
YY_ACTION(void) yy_1_unary(yycontext *yy, char *yytext, int yyleng)
{
#define lhs yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_unary\n"));
  {
#line 111
   __ = -lhs ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef lhs
}
YY_ACTION(void) yy_4_mul(yycontext *yy, char *yytext, int yyleng)
{
#define rhs yy->__val[-1]
#define lhs yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_4_mul\n"));
  {
#line 109
   __ = lhs ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef rhs
#undef lhs
}
YY_ACTION(void) yy_3_mul(yycontext *yy, char *yytext, int yyleng)
{
#define rhs yy->__val[-1]
#define lhs yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_mul\n"));
  {
#line 108
   lhs %= rhs ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef rhs
#undef lhs
}
YY_ACTION(void) yy_2_mul(yycontext *yy, char *yytext, int yyleng)
{
#define rhs yy->__val[-1]
#define lhs yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_mul\n"));
  {
#line 107
   lhs /= rhs ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef rhs
#undef lhs
}
YY_ACTION(void) yy_1_mul(yycontext *yy, char *yytext, int yyleng)
{
#define rhs yy->__val[-1]
#define lhs yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_mul\n"));
  {
#line 106
   lhs *= rhs ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef rhs
#undef lhs
}
YY_ACTION(void) yy_3_add(yycontext *yy, char *yytext, int yyleng)
{
#define rhs yy->__val[-1]
#define lhs yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_add\n"));
  {
#line 104
   __ = lhs ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef rhs
#undef lhs
}
YY_ACTION(void) yy_2_add(yycontext *yy, char *yytext, int yyleng)
{
#define rhs yy->__val[-1]
#define lhs yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_add\n"));
  {
#line 103
   lhs -= rhs ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef rhs
#undef lhs
}
YY_ACTION(void) yy_1_add(yycontext *yy, char *yytext, int yyleng)
{
#define rhs yy->__val[-1]
#define lhs yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_add\n"));
  {
#line 102
   lhs += rhs ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef rhs
#undef lhs
}
YY_ACTION(void) yy_1_assign(yycontext *yy, char *yytext, int yyleng)
{
#define x yy->__val[-1]
#define i yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_assign\n"));
  {
#line 99
   __ = variables[i] = x ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef x
#undef i
}
YY_ACTION(void) yy_1_start(yycontext *yy, char *yytext, int yyleng)
{
#define x yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_start\n"));
  {
#line 95
   result = x ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef x
}

YY_RULE(int) yy_blank(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "blank"));
  {  int yypos2= yy->__pos, yythunkpos2= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\046\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l3;  goto l2;
  l3:;	  yy->__pos= yypos2; yy->__thunkpos= yythunkpos2;  if (!yymatchString(yy, "//")) goto l1;
  l4:;	
  {  int yypos5= yy->__pos, yythunkpos5= yy->__thunkpos;
  {  int yypos6= yy->__pos, yythunkpos6= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\044\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l6;  goto l5;
  l6:;	  yy->__pos= yypos6; yy->__thunkpos= yythunkpos6;
  }  if (!yymatchDot(yy)) goto l5;  goto l4;
  l5:;	  yy->__pos= yypos5; yy->__thunkpos= yythunkpos5;
  }
  }
  l2:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "blank", yy->__buf+yy->__pos));
  return 1;
  l1:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "blank", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_alnum(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "alnum"));  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\003\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l7;
  yyprintf((stderr, "  ok   %s @ %s\n", "alnum", yy->__buf+yy->__pos));
  return 1;
  l7:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "alnum", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_alpha(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "alpha"));  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l8;
  yyprintf((stderr, "  ok   %s @ %s\n", "alpha", yy->__buf+yy->__pos));
  return 1;
  l8:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "alpha", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_integer(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "integer"));  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_BEGIN)) goto l9;
#undef yytext
#undef yyleng
  }  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l9;
  l10:;	
  {  int yypos11= yy->__pos, yythunkpos11= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l11;  goto l10;
  l11:;	  yy->__pos= yypos11; yy->__thunkpos= yythunkpos11;
  }  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_END)) goto l9;
#undef yytext
#undef yyleng
  }  if (!yy__(yy)) goto l9;  yyDo(yy, yy_1_integer, yy->__begin, yy->__end);
  yyprintf((stderr, "  ok   %s @ %s\n", "integer", yy->__buf+yy->__pos));
  return 1;
  l9:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "integer", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_RPAR(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "RPAR"));  if (!yymatchChar(yy, ')')) goto l12;  if (!yy__(yy)) goto l12;
  yyprintf((stderr, "  ok   %s @ %s\n", "RPAR", yy->__buf+yy->__pos));
  return 1;
  l12:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "RPAR", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_LPAR(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "LPAR"));  if (!yymatchChar(yy, '(')) goto l13;  if (!yy__(yy)) goto l13;
  yyprintf((stderr, "  ok   %s @ %s\n", "LPAR", yy->__buf+yy->__pos));
  return 1;
  l13:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "LPAR", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_value(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;  yyDo(yy, yyPush, 2, 0);
  yyprintf((stderr, "%s\n", "value"));
  {  int yypos15= yy->__pos, yythunkpos15= yy->__thunkpos;  if (!yy_LPAR(yy)) goto l16;  if (!yy_add(yy)) goto l16;  yyDo(yy, yySet, -2, 0);  if (!yy_RPAR(yy)) goto l16;  yyDo(yy, yy_1_value, yy->__begin, yy->__end);  goto l15;
  l16:;	  yy->__pos= yypos15; yy->__thunkpos= yythunkpos15;  if (!yy_integer(yy)) goto l17;  goto l15;
  l17:;	  yy->__pos= yypos15; yy->__thunkpos= yythunkpos15;  if (!yy_id(yy)) goto l14;  yyDo(yy, yySet, -1, 0);  yyDo(yy, yy_2_value, yy->__begin, yy->__end);
  }
  l15:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "value", yy->__buf+yy->__pos));  yyDo(yy, yyPop, 2, 0);
  return 1;
  l14:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "value", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_PLING(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "PLING"));  if (!yymatchChar(yy, '!')) goto l18;  if (!yy__(yy)) goto l18;
  yyprintf((stderr, "  ok   %s @ %s\n", "PLING", yy->__buf+yy->__pos));
  return 1;
  l18:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "PLING", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_PCENT(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "PCENT"));  if (!yymatchChar(yy, '%')) goto l19;  if (!yy__(yy)) goto l19;
  yyprintf((stderr, "  ok   %s @ %s\n", "PCENT", yy->__buf+yy->__pos));
  return 1;
  l19:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "PCENT", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_SLASH(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "SLASH"));  if (!yymatchChar(yy, '/')) goto l20;  if (!yy__(yy)) goto l20;
  yyprintf((stderr, "  ok   %s @ %s\n", "SLASH", yy->__buf+yy->__pos));
  return 1;
  l20:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "SLASH", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_STAR(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "STAR"));  if (!yymatchChar(yy, '*')) goto l21;  if (!yy__(yy)) goto l21;
  yyprintf((stderr, "  ok   %s @ %s\n", "STAR", yy->__buf+yy->__pos));
  return 1;
  l21:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "STAR", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_unary(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;  yyDo(yy, yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "unary"));
  {  int yypos23= yy->__pos, yythunkpos23= yy->__thunkpos;  if (!yy_MINUS(yy)) goto l24;  if (!yy_unary(yy)) goto l24;  yyDo(yy, yySet, -1, 0);  yyDo(yy, yy_1_unary, yy->__begin, yy->__end);  goto l23;
  l24:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;  if (!yy_PLING(yy)) goto l25;  if (!yy_unary(yy)) goto l25;  yyDo(yy, yySet, -1, 0);  yyDo(yy, yy_2_unary, yy->__begin, yy->__end);  goto l23;
  l25:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;  if (!yy_value(yy)) goto l22;
  }
  l23:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "unary", yy->__buf+yy->__pos));  yyDo(yy, yyPop, 1, 0);
  return 1;
